Fix alignment

--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -1004,6 +1004,11 @@
 	border: none;
 	box-shadow: none;
 	overflow-y: visible;
+	pointer-events: none;
+
+	> * {
+		pointer-events: all;
+	}
 }
 
 .components-popover.block-editor-block-list__block__popover[data-x-axis="right"] .components-popover__content {
@@ -1013,4 +1018,13 @@
 .components-popover .block-editor-block-contextual-toolbar {
 	margin-bottom: $block-padding - $border-width;
 	margin-left: - $block-padding;
+}
+
+// Make space for the block movers. Ideally they should move within the toolbar.
+.components-popover .block-editor-block-contextual-toolbar[data-align="wide"] {
+	margin-left: 86px;
+}
+
+.components-popover .block-editor-block-contextual-toolbar[data-align="full"] {
+	margin-left: 86 + 2 * $block-padding;
 }
